--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ plugins {
 ext {
     scalaBinaryVersion = '2.12'
     scalaMinorVersion = '6'
-    scalatestVersion = '3.0.5'
+    scalaTestVersion = '3.0.5'
     scalaVersion = "$scalaBinaryVersion.$scalaMinorVersion"
 
     vertxVersion = '3.5.3'
@@ -27,9 +27,9 @@ dependencies {
 
     implementation "org.scala-lang:scala-library:$scalaVersion"
 
-    implementation "org.scalatest:scalatest:$scalatestVersion"
+    testImplementation "org.scalatest:scalatest_2.12:$scalaTestVersion"
 
-    implementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
 
     implementation "io.vertx:vertx-lang-scala_2.12:$vertxVersion"
 
